# b3m

./: .gitignore  .gitmodules  README.md  admin.sh  cierr.txt  pyproject.toml
.github/workflows/: ci.yml
examples/: build_blade.py  validate_config.py
resources/: blade_test.yml
src/b3m/: __init__.py  integration.py  validator.py
src/b3m/cli/: __init__.py
tests/: __init__.py  test_build_blade.py  test_examples.py  test_integration.py  test_validator.py
