[project]
name = "b3m"
version = "0.1.0"
dependencies = [
    "treeparse",
    "statesman",
    "b3_geo",
    "b3_msh",
    "b3_drp",
    "b3_2d",
    "pydantic",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]

[project.scripts]
b3m = "b3m.cli:main"
b3m-build = "b3m.integration:main"

[tool.uv.sources]
# For local development, use path (uncomment and comment git lines):
b3_geo = { path = "../b3_geo" }
b3_msh = { path = "../b3_msh" }
b3_drp = { path = "../b3_drp" }
b3_2d = { path = "../b3_2d" }
# For production or CI, use git over HTTPS:
# b3_geo = { git = "https://github.com/wr1/b3_geo.git" }
# b3_msh = { git = "https://github.com/wr1/b3_msh.git" }
# b3_drp = { git = "https://github.com/wr1/b3_drp.git" }
# b3_2d = { git = "https://github.com/wr1/b3_2d.git" }

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
